@@ -1,3 +1,8 @@
+2004-03-04  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tests/registry.test: Applied fixed from #766159 to skip two
+	tests on Win98 that depend on a Unicode registry (NT specific).
+
 2004-03-04  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclParse.c (InitParse):	Factored the common code
